compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__multi_subject_catch_all.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 95
expression: "\npub fn go(x, y) {\n  case x, y {\n    True, True -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, y) {
  case x, y {
    True, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(x, y) {
  if (y) {
    if (x) {
      return 1;
    } else {
      return 0;
    }
  } else {
    return 0;
  }
}
