compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__multi_subject_or.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn go(x, y) {\n  case x, y {\n    True, _ | _, True -> 1\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x, y) {
  case x, y {
    True, _ | _, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(x, y) {
  if (x) {
    return 1;
  } else if (y) {
    return 1;
  } else {
    return 0;
  }
}
