compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__pipe.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn go(x, f) {\n  case x |> f {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x, f) {
  case x |> f {
    0 -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x, f) {
  let $ = (() => {
    let _pipe = x;
    return f(_pipe);
  })();
  if ($ === 0) {
    return 1;
  } else {
    return 2;
  }
}
